--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4042,7 +4042,7 @@
       </notes>
       <segment>
         <source>Texteditor-Inhalte zur Sicherheit zwischenspeichern</source>
-        <target>Texteditor-Inhalte zur Sicherheit zwischenspeichern</target>
+        <target>Sauvegarde automatique du contenu de l'éditeur de texte du forum</target>
       </segment>
     </unit>
   </file>
