ES Translation, Soul

--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4034,7 +4034,7 @@
       </notes>
       <segment>
         <source>Texteditor-Inhalte zur Sicherheit zwischenspeichern</source>
-        <target>Texteditor-Inhalte zur Sicherheit zwischenspeichern</target>
+        <target>Almacene en caché el contenido del editor de texto para mayor seguridad</target>
       </segment>
     </unit>
   </file>
