Added missing FR Translation in soul

--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -3871,7 +3871,7 @@
       </notes>
       <segment>
         <source>Diese Stadt stammt aus der Alpha-Phase von MyHordes. Die angezeigten Informationen sind daher möglicherweise unvollständig oder sehen nicht so aus, wie du es sonst erwarten würdest.</source>
-        <target>Diese Stadt stammt aus der Alpha-Phase von MyHordes. Die angezeigten Informationen sind daher möglicherweise unvollständig oder sehen nicht so aus, wie du es sonst erwarten würdest.</target>
+        <target>Cette ville est issue de la phase alpha de MyHordes. Les informations affichées peuvent donc être incomplètes ou ne pas ressembler à ce que vous vous attendez.</target>
       </segment>
     </unit>
     <unit id="vgT9Zpn" name="Alte Auszeichnungen">
