--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -19508,7 +19508,7 @@
       </notes>
       <segment>
         <source>{citizen} hat versucht {item} aus der Bank zu stehlen, dabei aber KEINERLEI DISKRETION gezeigt.</source>
-        <target><![CDATA[{citizen} a tenté de voler <strong>voler</strong> {item} dans la Banque mais a été <strong>PARFAITEMENT INCAPABLE DE FAIRE PREUVE DE DISCRÉTION</strong> !!]]></target>
+        <target><![CDATA[{citizen} a tenté de voler {item} dans la Banque mais a été <strong>PARFAITEMENT INCAPABLE DE FAIRE PREUVE DE DISCRÉTION</strong> !!]]></target>
       </segment>
     </unit>
     <unit id="K9BlavM">
