--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -6986,7 +6986,7 @@
       </notes>
       <segment>
         <source>Du hast Dir Dein eigenes Grab geschaufelt. Oh welche Ironie!</source>
-        <target>You have dug your own tomb. Oh what irony!</target>
+        <target>You have dug your own tomb. Oh the irony!</target>
       </segment>
     </unit>
     <unit id="nv.FYHK" name="Versteck verlassen">
